<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="0dp"
        android:minHeight="48dp"
        android:paddingVertical="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="message"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>
